--- a/en/Index.html
+++ b/en/Index.html
@@ -36,7 +36,8 @@
           when you join!
         </p>
 
-          <button class="overlay__btn">
+        <div class="overlay__btns">
+          <button class="overlay__btn overlay__btn--colors">
             <a
               href="https://discord.gg/m4jMgc8pga"
               target="_blank"
