--- a/en/index.html
+++ b/en/index.html
@@ -24,14 +24,13 @@
               background-clip: text;
               -webkit-text-fill-color: transparent;
             "
-            >Venture</span
+            >Venture Hub</span
           >
-          Hub
           <span class="overlay__title-emoji">👋</span>
         </h1>
 
         <p class="overlay__description">
-          its about <strong>Venture Hub</strong>, Created By <strong>Noah</strong> and the script is universal/supports games
+          The Script Name Is <strong>Venture Hub</strong>, Created By <strong>Noah</strong> and the script is universal/supports games
           <strong>There will be more games soon just suggest in the Suggestion channel</strong>
           when you join!
         </p>
