--- a/en/index.html
+++ b/en/index.html
@@ -31,8 +31,8 @@
 
         <p class="overlay__description">
           The Script Name Is <strong>Venture Hub</strong>, Created By <strong>Noah</strong> and the script is universal/supports games
-          <strong>There will be more games soon just suggest in the Suggestion channel</strong>
-          when you join!
+          <strong>There will be more games soon just suggest in the Suggestion channel
+          when you join!</strong>
         </p>
 
         <div class="overlay__btns">
