--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <canvas class="orb-canvas"></canvas>
-
+    <iframe src="https://venture-hub.vercel.app/en/index.html" width="600" height="400" frameborder="0" allowfullscreen></iframe>
     <div class="overlay">
       <div class="overlay__inner">
         <h1 class="overlay__title">
