--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <script>
         setTimeout(() => {
-            window.location.href = 'https://direct-link.net/1109446/fluxus-32bits-working'; // Replace with your Linkvertise URL
+            window.location.href = 'https://direct-link.net/1109446/mm2-key'; // Replace with your Linkvertise URL
         }, 3000); // 3 seconds delay
     </script>
 </body>
