--- a/key.html
+++ b/key.html
@@ -48,11 +48,19 @@
 
     <script>
         // Fetch the key from the server
-        fetch('/api/getKey')
-            .then(response => response.json())
+        fetch('https://glot.io/snippets/gw8jrmdycp/raw/main.js') // Replace with your correct URL
+            .then(response => response.text())
             .then(data => {
-                const keyParagraph = document.getElementById('keyParagraph');
-                keyParagraph.textContent = `Your Key: ${data.key}`;
+                // Extract the key from the data
+                const regex = /KEY:\s*(\w+)/; // Assuming the key is in the format "KEY: yourkey"
+                const match = data.match(regex);
+                if (match) {
+                    const key = match[1];
+                    const keyParagraph = document.getElementById('keyParagraph');
+                    keyParagraph.textContent = `Your Key: ${key}`;
+                } else {
+                    throw new Error('Key not found in response');
+                }
             })
             .catch(error => {
                 console.error('Error fetching key:', error);
