--- a/key.html
+++ b/key.html
@@ -48,19 +48,11 @@
 
     <script>
         // Fetch the key from the server
-        fetch('https://glot.io/snippets/gw8jrmdycp/raw/main.js') // Replace with your correct URL
+        fetch('https://glot.io/snippets/gw8jrmdycp/raw/main.js')
             .then(response => response.text())
             .then(data => {
-                // Extract the key from the data
-                const regex = /KEY:\s*(\w+)/; // Assuming the key is in the format "KEY: yourkey"
-                const match = data.match(regex);
-                if (match) {
-                    const key = match[1];
-                    const keyParagraph = document.getElementById('keyParagraph');
-                    keyParagraph.textContent = `Your Key: ${key}`;
-                } else {
-                    throw new Error('Key not found in response');
-                }
+                const keyParagraph = document.getElementById('keyParagraph');
+                keyParagraph.textContent = `Your Key: ${data}`;
             })
             .catch(error => {
                 console.error('Error fetching key:', error);
