--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             const urlParams = new URLSearchParams(window.location.search);
             const hwid = urlParams.get('HWID');
             if (hwid) {
-                window.location.href = `https://key-system-venture.vercel.app/checkpoint1?HWID=${hwid}`;
+                window.location.href = `https://venture-hub.vercel.app/checkpoint1?HWID=${hwid}`;
             } else {
                 alert('HWID is missing in the URL');
             }
