--- a/checkpoint1.html
+++ b/checkpoint1.html
@@ -46,5 +46,6 @@
             window.location.href = `https://key-system-venture.vercel.app/checkpoint2?HWID=${hwid}`;
         }
     </script>
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(1109446, {whitelist: [], blacklist: [""]});</script>
 </body>
 </html>
