--- a/checkpoint2.html
+++ b/checkpoint2.html
@@ -43,7 +43,7 @@
         function getKey() {
             const urlParams = new URLSearchParams(window.location.search);
             const hwid = urlParams.get('HWID');
-            window.location.href = `https://key-system-venture.vercel.app/api/generateKey?HWID=${hwid}`;
+            window.location.href = `https://venture-hub.vercel.app/KeyGenerated.html?HWID=${hwid}`;
         }
     </script>
 </body>
