--- a/checkpoint1.html
+++ b/checkpoint1.html
@@ -43,7 +43,7 @@
         function nextCheckpoint() {
             const urlParams = new URLSearchParams(window.location.search);
             const hwid = urlParams.get('HWID');
-            window.location.href = `https://key-system-venture.vercel.app/checkpoint2?HWID=${hwid}`;
+            window.location.href = `https://venture-hub.vercel.app/checkpoint2.html?HWID=${hwid}`;
         }
     </script>
     </body>
