--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Venture Hub</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -55,6 +56,5 @@
     <footer>
         <p>© 2024 Venture Hub. All rights reserved.</p>
     </footer>
-    <script src="scripts.js"></script>
 </body>
 </html>
