--- a/Download/Download.html
+++ b/Download/Download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VenoX Development</title>
+    <title>Venture Development</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
@@ -64,7 +64,7 @@
 <body>
     <div class="container">
         <img src="https://venture-hub.vercel.app/logo.png" alt="Logo" class="logo">
-        <h1>VenoX is Still in Development</h1>
+        <h1>Venture Hu  is Still in Development</h1>
         <p>We are working hard to bring you an amazing experience. Stay tuned for updates!</p>
         <div class="footer">
             &copy; 2024 Venture Team | All rights reserved.
