--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="get-script" class="section">
         <h2>Get Your Script</h2>
         <p>Click the button below to get the latest exploit script for Roblox.</p>
-        <a href=".Download/Download.html" class="btn">Download Script</a>
+        <a href="Download/Download.html" class="btn">Download Script</a>
     </section>
     <section id="support" class="section">
         <h2>Support</h2>
