--- a/Download/Download.html
+++ b/Download/Download.html
@@ -63,8 +63,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://venture-hub.vercel.app/logo.png" alt="Logo" class="logo">
-        <h1>Venture Hu  is Still in Development</h1>
+        <img src="https://venture-lol.vercel.app/logo.png" alt="Logo" class="logo">
+        <h1>Venture Hub is Still in Development</h1>
         <p>We are working hard to bring you an amazing experience. Stay tuned for updates!</p>
         <div class="footer">
             &copy; 2024 Venture Team | All rights reserved.
